# sword

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  LICENSE  README.md  nock-a.rkt  nock-b-scry.rkt  nock-c-exceptions.rkt  nock-d-cps.rkt  nock-d-inline.rkt  nock-e-optimize-edit.rkt  nock-f-cps.rkt  nock-f-explicit-apply.rkt  nock-g-closure-convert.rkt  nock-g-explicit-apply.rkt  nock-h-closure-convert.rkt  nock-i-k-stack.rkt  nock-j-registerize.rkt  nock-k-separate-control-stack.rkt  rust-toolchain.toml  rustfmt.toml
.github/scripts/arch/: get-runner-arch
.github/scripts/hoon/: boot-ship.sh  setup-ship.sh  test-ship.sh
.github/workflows/: ares-feature.yml  ares-once.yml  ares-shared.yml  ares-status.yml  ares.yml  build.yml  hoon-feature.yml  hoon-shared.yml  hoon-status.yml  rust.yml
cps-interpreter/: nock-a.rkt  nock-b-scry.rkt  nock-c-exceptions.rkt  nock-k-separate-control.stack.rkt
cps-interpreter/fifth-pass/: nock-e-optimize-edit.rkt  nock-j-registerize.rkt  nock-l-imperative-cons.rkt
cps-interpreter/first-pass/: nock-a.rkt  nock-e-registerise.rkt
cps-interpreter/fourth-pass/: nock-e-fast-tree-edit.rkt  nock-h-registerize.rkt
cps-interpreter/second-pass/: nock-b-optimize-edit.rkt
cps-interpreter/third-pass/: nock-a.rkt
docs/: b-trees.md  codegen-bootstrap.md  examples.md  heap.md  llvm.md  memory.md  moving-memory.md  noun-rep.md  persistence.md  pill-notes.md  pills.md  priors.bib  split-stack.md  stack.md  storyboard.md  subject-knowledge.md
docs/proposal/: milestones.md  proposal-nock-performance.md
docs/status/: 20230419.md
fifth-pass/: nock-d-inline.rkt  nock-f-cps.rkt  nock-g-explicit-apply.rkt  nock-h-closure-convert.rkt  nock-i-k-stack.rkt
first-pass/: nock-c-lambda-lift.rkt  nock-d-first-order-ks.rkt
hoon/codegen/exa/: dec.hoon
hoon/codegen/lib/: cg.hoon  degen.hoon  drop.hoon  eval.hoon  hoon.hoon  hoot.hoon  line.hoon  make.hoon  runt.hoon  sack.hoon  ska.hoon  skan.hoon  skis.hoon  sky.hoon  soak.hoon  wink.hoon
hoon/codegen/sur/: gene.hoon  noir.hoon  sock.hoon
hoon/codegen/ted/: cg-build.hoon  eval-build.hoon
hoon/scaffolding/: azimuth-pill.hoon  baby.hoon  cradle.hoon  naive-cradle.hoon  playpen.hoon  toddler.hoon
notes/: a-proposal-nock-performance.md  b-hypotheses.md  nock.txt  notes-~2021.9.23.md  notes-~2021.9.24.md  noun-representation.md
resources/jam/: decfast.jam  decflow.jam  decrement.jam  decslow.jam  hurray.jam  repeat5_10.jam  repeat5_1000.jam  repeat5_100_tc.jam  repeat5_10_tc.jam
resources/pills/: baby-dec.pill  baby.pill  oom.pill  toddler.pill
rust/: flake.nix  shell.nix
rust/ares/: CONTRIBUTING.md  Cargo.toml  build.rs
rust/ares/benches/: boz.rs  cue_pill.rs
rust/ares/src/: codegen.rs  disk.rs  flog.rs  guard.rs  hamt.rs  interpreter.rs  jets.rs  jets_math.rs  lib.rs  lmdb.rs  load.rs  main.rs  mars.rs  mem.rs  mug.rs  newt.rs  noun.rs  persist.rs  pma.rs  serf.rs  serialization.rs  site.rs  snapshot.rs  trace.rs  unifying_equality.rs
rust/ares/src/jets/: .parse.rs.swp  bits.rs  cold.rs  crypto.rs  float.rs  float_rd.rs  float_rh.rs  float_rq.rs  float_rs.rs  form.rs  hash.rs  hot.rs  list.rs  lock.rs  lute.rs  maps.rs  math.rs  mink.rs  mock.rs  nock.rs  order.rs  parse.rs  seam.rs  serial.rs  sort.rs  text.rs  tree.rs  ut.rs  virtual.rs  warm.rs
rust/ares/src/jets/crypto/: ed.rs  sha.rs
rust/ares/src/jets/lock/: aes.rs  ed.rs  sha.rs
rust/ares/src/pma/: .gitignore  README.md  makefile  malloc.c  malloc.h
rust/ares/src/pma/includes/: checksum.c
rust/ares/src/pma/test/: internals.h  malloc.c  sanity.c
rust/ares/src/snapshot/: double_jam.rs  pma.rs
rust/ares/src/urcrypt/: .gitignore  configure.ac
rust/ares/test_data/: baby.pill  decrement2.jam  puny.jam  puny.txt  repeat5_100.jam  repeat5_1000_tc.jam  shax.jam  toddler.pill
rust/ares/updates/: 9-20-2023.md
rust/ares_crypto/: Cargo.toml
rust/ares_crypto/src/: aes_siv.rs  ed25519.rs  lib.rs  sha.rs
rust/ares_guard/: Cargo.toml  build.rs
rust/ares_guard/c-src/: guard.c  guard.h
rust/ares_guard/src/: lib.rs
rust/ares_macros/: Cargo.toml
rust/ares_macros/src/: lib.rs
rust/ares_pma/: Cargo.toml  build.rs
rust/ares_pma/c-src/: alloc-demo.c  alloc-demo.org  btest-overrides.h  btest.c  btree.c  btree.h  compile-demo.sh  compile-phk.sh  memcorrupt.c  phkmalloc.c  read-demo.c  wrapper.h  write-demo.c
rust/assert-no-alloc/: Cargo.toml
rust/assert-no-alloc/src/: lib.rs
rust/assert_no_alloc/examples/: main.rs
rust/assert_no_alloc/src/: lib.rs
rust/assert_no_alloc/tests/: test.rs
rust/ibig/: Cargo.toml  README.md
rust/ibig-rs/src/: add_ops.rs  buffer.rs  convert.rs  div_ops.rs  memory.rs  mul_ops.rs
rust/ibig/benches/: benchmarks.rs
rust/ibig/src/: add_ops.rs  buffer.rs  convert.rs  div_ops.rs  fast_divide.rs  lib.rs  memory.rs  mul_ops.rs  num_traits.rs  ubig.rs
rust/ibig/tests/: convert.rs  radix.rs
rust/iron-planet/: Cargo.toml
rust/iron-planet/src/: interpreter.rs  lib.rs  main.rs  mem.rs  memory.rs  mug.rs  noun.rs  serialization.rs
rust/murmur3/: Cargo.toml  README.md
rust/murmur3/benches/: bench.rs
rust/nix/: libaes_siv.nix  overlay.nix  sources.json  urcrypt.nix
rust/pma_malloc/: .gitignore  README.md  makefile
rust/rust-assert-no-alloc/: Cargo.toml  LICENSE  README.md
rust/rust-assert-no-alloc/examples/: main.rs
rust/rust-assert-no-alloc/src/: lib.rs
rust/sword/: Cargo.toml
rust/sword/benches/: cue_pill.rs  nock.rs
rust/sword/src/: flog.rs  guard.rs  hamt.rs  interpreter.rs  jets.rs  lib.rs  main.rs  mem.rs  mug.rs  newt.rs  noun.rs  persist.rs  serf.rs  serialization.rs  site.rs  test_fns.rs  trace.rs  unifying_equality.rs
rust/sword/src/jets/: bits.rs  cold.rs  form.rs  hash.rs  hot.rs  list.rs  lute.rs  math.rs  nock.rs  parse.rs  serial.rs  sort.rs  tree.rs  warm.rs
rust/sword/src/jets/lock/: aes.rs  ed.rs  sha.rs
rust/sword_crypto/: Cargo.toml
rust/sword_guard/: Cargo.toml
rust/sword_macros/: Cargo.toml
rust/sword_pma/: Cargo.toml  build.rs
second-pass/: nock.rkt
subject-knowledge/lib/: subject-knowledge.hoon
(+48 files in other folders)
