[package]
name = "ares"
version = "0.1.0"
authors = ["Edward Amsden <edward@tlon.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [patch.crates-io]
# ibig = { path = "../ibig-rs" }

# Please keep these alphabetized
[dependencies]
ares_guard = { path = "../ares_guard" }
ares_crypto = { path = "../ares_crypto" }
ares_macros = { path = "../ares_macros" }
# Use this when debugging requires the debug printfs in the PMA
# ares_pma = { path = "../ares_pma", features=["debug_prints"] }
ares_pma = { path = "../ares_pma" }
# use this when debugging requires allocation (e.g. eprintln)
# assert_no_alloc = { path = "../rust-assert-no-alloc", features=["warn_debug"] }
assert_no_alloc = { path = "../rust-assert-no-alloc" }
bitvec = "1.0.0"
criterion = "0.4"
either = "1.9.0"
ibig = { path = "../ibig-rs" }
intmap = "1.1.0"
json = "0.12.4"
libc = "0.2.126"
memmap = "0.7.0"
murmur3 = { git = "https://github.com/tloncorp/murmur3", rev = "7878a0f" }
num-derive = "0.3"
num-traits = "0.2"
static_assertions = "1.1.0"

[build-dependencies]
autotools = "0.2"
cc = "1.0"

[[bin]]
name = "ares"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

# run with e.g. 'cargo build --features check_forwarding,check_acyclic'
[features]
# FOR DEBUGGING MEMORY ISSUES ONLY
check_all = [ "check_acyclic", "check_forwarding", "check_junior" ]
check_acyclic = []
check_forwarding = []
check_junior = []
sham_hints = []
stop_for_debug = []
