[package]
name = "ares_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_no_alloc = "1.1.2"
# use this when debugging requires allocation (e.g. eprintln)
# assert_no_alloc = {version="1.1.2", features=["warn_debug"]}
ibig = "0.3.6"

# optional features
curve25519-dalek = {version = "4.1.1", optional = true }
ed25519-dalek = { version = "2.1.0", features = ["digest", "pkcs8", "rand_core"], default-features = false, optional = true }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"], default-features = false, optional = true}

aes = { version = "0.8.3", optional = true }
aes-siv = { version = "0.7.0", features = ["heapless"], default-features = false, optional = true }

sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.8", optional = true }

urcrypt-sys = { version = "0.1.1", optional = true }

[features]
# XX turn off test_vs_urcrypt after development
default = ["aes_siv", "ed25519", "sha", "test_vs_urcrypt"]
aes_siv = ["aes", "aes-siv"]
ed25519 = ["curve25519-dalek", "ed25519-dalek", "x25519-dalek"]
sha = ["sha1", "sha2"]
test_vs_urcrypt = ["urcrypt-sys"]
