[package]
name = "iron-planet"
version = "0.1.0"
authors = ["Edward Amsden <edward@blackriversoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.6.2"
noun = { git = "https://github.com/mcevoypeter/urbit.git", branch = "main" }
