[package]
name = "sword"
version = "0.1.0"
authors = ["Edward Amsden <edward@tlon.io>"]
edition = "2018"

[lints.clippy]
missing_safety_doc = "allow"

# Please keep these alphabetized
[dependencies]
sword_crypto = { path = "../sword_crypto" }
sword_macros = { path = "../sword_macros" }
assert_no_alloc = { path = "../assert_no_alloc", features = ["warn_debug"] }
murmur3 = { path = "../murmur3" }
bitvec = "1.0.0"
criterion = "0.4"
either = "1.9.0"
ibig = { path = "../ibig" }
intmap = "1.1.0"
json = "0.12.4"
lazy_static = "1.4.0"
libc = "0.2.126"
memmap2 = "^0.9.5"
num-derive = "0.3"
num-traits = "0.2"
rand = "0.8.5"
signal-hook = "0.3"
static_assertions = "1.1.0"
thiserror = "1.0.64"

[build-dependencies]
autotools = "0.2"
cc = "1.0"

# run with e.g. 'cargo build --features check_forwarding,check_acyclic'
[features]
default = ["mmap"]
malloc = []
mmap = []
# FOR DEBUGGING MEMORY ISSUES ONLY
check_all = ["check_acyclic", "check_forwarding", "check_junior"]
check_acyclic = []
check_forwarding = []
check_junior = []
sham_hints = []
stop_for_debug = []
hint_dont = []
